src/objects/Macroprofil_Transporteur__c.object
<CustomObject>
    <description>Transporteurs ajoutés par défaut au relais lors de son association avec un macro-profil.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desactive__c</fullName>
        <description>Champ technique, à afficher dans les rapports.</description>
        <formula>IF( Active__c =true, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Désactivé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Macroprofil__c</fullName>
        <label>Macroprofil</label>
        <referenceTo>Macroprofil__c</referenceTo>
        <relationshipLabel>Transporteur par defaut</relationshipLabel>
        <relationshipName>Transporteur_par_defaut</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Modifiable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReferenceExterne__c</fullName>
        <externalId>true</externalId>
        <label>Réference Externe</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Techatraiter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Techatraiter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transporteur__c</fullName>
        <label>Transporteur</label>
        <referenceTo>Transporteur__c</referenceTo>
        <relationshipLabel>Macroprofils liés à ce transporteur</relationshipLabel>
        <relationshipName>Transporteur_par_defaut</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Transporteur par defaut</label>
    <nameField>
        <displayFormat>TPD-{0000}</displayFormat>
        <label>Numéro du Transporteur par defaut</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transporteur par defaut</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TranspDefault_VR01_chooseOneValue</fullName>
        <active>true</active>
        <errorConditionFormula>If(Active__c = true,1,0)+ 
If(Exclut__c = true,1,0)+ 
If(Interdit__c = true, 1,0) 
&gt; 1</errorConditionFormula>
        <errorMessage>Veuillez choisir une des cases à cochés suivantes (Activé, Exclu ou Interdit)</errorMessage>
    </validationRules>
</CustomObject>